fix: show version on mobile when update available (#1089)

--- a/components/userpage/index.less
+++ b/components/userpage/index.less
@@ -280,6 +280,12 @@
 					opacity: 0.5;
 					font-weight: 500;
 				}
+
+				.hasupdate {
+					display: block;
+					margin: 0 auto;
+					margin-bottom: 20px;
+				}
 			}
 
 			.addmenu{
